working on aufgabe 6

--- a/TheGI4/ha2/aufgabe3.tex
+++ b/TheGI4/ha2/aufgabe3.tex
@@ -36,6 +36,6 @@ Sei $f,g \in B$ beliebig mit $f \neq g$.
 Dann existieren sowohl $\Inv{f}$ als auch $\Inv{g}$. Auch $\subseteq$ ist für diese beiden definiert, darauf folgt dass $f \leq g$ definiert ist\\
 Nun gilt:
 $ \bigsqcup \{f,g\}= f$ falls $f \leq g$ sonst 
-$ \bigsqcup \{f,g\}= g$.
+$ \bigsqcup \{f,g\}= g$.$\blacksquare$
 
 
