--- a/TheGI4/ha2/hausaufgabe2.tex
+++ b/TheGI4/ha2/hausaufgabe2.tex
@@ -14,6 +14,7 @@
 \usepackage{stmaryrd}
 \newcommand{\Inv}[1]{#1^{-1}(\{1\})}
 \newcommand{\InvN}[1]{#1^{-1}(\{0\})}
+\newcommand{\rr}{\sqsubseteq}
 \usetikzlibrary{arrows}
 \RequirePackage{etoolbox}
 \usepackage{Macros}
