--- a/TheGI4/ha2/aufgabe3.tex
+++ b/TheGI4/ha2/aufgabe3.tex
@@ -2,12 +2,10 @@
 \subsection*{a)}
 
 Z.z $\leq$ ist eine partielle Ordnung auf $B$.\\
-Es genügt zu zeigen dass $\leq$ reflexiv, antisymetrisch und transitiv ist.\\
-
-Reflexiv\\
-Sei $f \in B$ beliebig. Dann gilt $f \leq f$ da $\Inv{f} \subseteq \Inv{f}$ (1)\\
-
-Antisymetrisch \\
+Es genügt zu zeigen dass $\leq$ reflexiv, antisymetrisch und transitiv ist.\\\\
+\textbf{Reflexiv\\}
+Sei $f \in B$ beliebig. Dann gilt $f \leq f$ da $\Inv{f} \subseteq \Inv{f}$ (1)\\\\
+\textbf{Antisymetrisch \\}
 Es muss gelten $\forall f,g \in B : f \leq g \land g \leq f \rightarrow f =g$.\\
 Sei $f,g \in B$ beliebig. 
 Annahme: $f \leq g \land g \leq f $ \\
@@ -15,27 +13,25 @@ Z.z $f =g$\\
 Aus der Annamhe folgt $\Inv{f} \subseteq \Inv{g} \land \Inv{g} \subseteq \Inv{f} $\\
  $\Rightarrow \Inv{f} = \Inv{g}$\\
 Dies impliziert aber auch $\InvN{f} = \InvN{g}$ da es sich um eine boolsche Funktion handelt.\\
-Daraus folgt dass $f=g$ (2)\\
-
-Transitiv\\
+Daraus folgt dass $f=g$ (2)\\\\
+\textbf{Transitiv\\}
 Es muss gelten $\forall f,g,h \in B : f \leq g \land g \leq h \rightarrow f \leq h$.\\
 Sei $f,g,h \in B$ beliebig. 
 Annahme: $f \leq g \land g \leq h$\\
 z.Z.: $f \leq h$\\
 Aus der Annahme folgt, dass  $\Inv{f} \subseteq \Inv{g} \land \Inv{g} \subseteq \Inv{h}$\\
 $\Rightarrow \Inv{f} \subseteq \Inv{h}$\\
-$\Rightarrow f \leq g$ (3)\\
-
+$\Rightarrow f \leq g$ (3)\\\\
 Mit (1) und (2) und (3) folgt, dass $\leq$ eine partielle Ordung auf $B$ ist. $\blacksquare$
 
 \subsection*{b)}
 Da wir auch TheGI3 wissen dass die Menge der boolschen Funktionen über n variablen die Mächtigkeit $2^n$ hat ist $B$ endlich.
-Mit Aufgabe 2 müssen wir ledlich zeigen dass$ \bigsqcup \{f,g\}$ für $f,g \in B$ existiert.
+Mit Aufgabe 2 müssen wir ledlich zeigen dass $ \bigsqcup \{f,g\}$ für $f,g \in B$ existiert.
 
 Sei $f,g \in B$ beliebig mit $f \neq g$. 
 Dann existieren sowohl $\Inv{f}$ als auch $\Inv{g}$. Auch $\subseteq$ ist für diese beiden definiert, darauf folgt dass $f \leq g$ definiert ist\\
 Nun gilt:
 $ \bigsqcup \{f,g\}= f$ falls $f \leq g$ sonst 
-$ \bigsqcup \{f,g\}= g$.$\blacksquare$
+$ \bigsqcup \{f,g\}= g$ $\blacksquare$
 
 
