--- a/TheGI4/ha2/aufgabe3.tex
+++ b/TheGI4/ha2/aufgabe3.tex
@@ -25,12 +25,11 @@ $\Rightarrow f \leq g$ (3)\\\\
 Mit (1) und (2) und (3) folgt, dass $\leq$ eine partielle Ordung auf $B$ ist. $\blacksquare$
 
 \subsection*{b)}
-Da wir aus TheGI3 wissen dass die Menge der boolschen Funktionen über n variablen die Mächtigkeit $2^n$ hat ist $B$ endlich.
-Mit Aufgabe 2 müssen wir lediglich zeigen dass $ \bigsqcup \{f,g\}$ für $f,g \in B$ existiert.
-
-Sei $f,g \in B$ beliebig mit $f \neq g$. 
+Da wir aus TheGI3 wissen dass die Menge der boolschen Funktionen über n variablen die Mächtigkeit $2^n$ hat ist $B$ endlich.\\
+Mit Aufgabe 2 müssen wir lediglich zeigen dass $ \bigsqcup \{f,g\}$ für $f,g \in B$ existiert.\\
+Sei $f,g \in B$ beliebig mit $f \neq g$. \\
 Dann existieren sowohl $\Inv{f}$ als auch $\Inv{g}$. Auch $\subseteq$ ist für diese beiden definiert, darauf folgt dass $f \leq g$ definiert ist\\
-Nun gilt:
+Nun gilt:\\
 $ \bigsqcup \{f,g\}= f$ falls $f \leq g$ sonst 
 $ \bigsqcup \{f,g\}= g$ $\blacksquare$
 
