--- a/TheGI4/ha2/aufgabe1.tex
+++ b/TheGI4/ha2/aufgabe1.tex
@@ -33,8 +33,15 @@
 f_{inf}((x_1,y_1),(x_2,y_2)) = \left\{
 \begin{array}{l} (x_1,y_1), falls \; x_1 \leq x_2 \land y_1 \leq y_2 \\ (x_1,y_2), falls \; x_1 \leq x_2 \land y_2 \leq y_1 \\ (x_2,y_1), falls \; x_2 \leq x_1 \land y_1 \leq y_2 \\ (x_2,y_2), falls \; x_2 \leq x_1 \land y_2 \leq y_1 \end{array}\right. \\
 \\ \\ \\
-f_{sup}((x_1,y_1),(x_2,y_2)) = \left\{
-\begin{array}{l} (x_1,y_1), falls \; x_1 \geq x_2 \land y_1 \geq y_2 \\ (x_1,y_2), falls \; x_1 \geq x_2 \land y_2 \geq y_1 \\ (x_2,y_1), falls \; x_2 \geq x_1 \land y_1 \geq y_2 \\ (x_2,y_2), falls \; x_2 \geq x_1 \land y_2 \geq y_1 \end{array}\right. \\
+f_{sup}((x_1,y_1),(x_2,y_2)) = 
+\left\{
+\begin{array}{l} 
+	(x_1,y_1), falls \; x_1 \geq x_2 \land y_1 \geq y_2 \\ 
+	(x_1,y_2), falls \; x_1 \geq x_2 \land y_2 \geq y_1 \\ 
+	(x_2,y_1), falls \; x_2 \geq x_1 \land y_1 \geq y_2 \\ 
+	(x_2,y_2), falls \; x_2 \geq x_1 \land y_2 \geq y_1 
+\end{array}
+\right. \\
 \end{math}	 	
 \subsection*{c)}
 \begin{math}
