--- a/TheGI4/ha2/aufgabe2.tex
+++ b/TheGI4/ha2/aufgabe2.tex
@@ -22,4 +22,4 @@ $\bigsqcup A_{i+1} = \bigsqcup(A_{i} \cup \{d\})$ für ein $d \in A_{i+1}$\\
 Falls $\bigsqcup A_{i} \sqsubseteq d$ dann ist $\bigsqcup A_{i+1} = d$ (4)\\
 Falls $d \sqsubseteq \bigsqcup A_{i}$ dann ist $\bigsqcup A_{i+1} = \bigsqcup A_{i}$ (5)\\
 Aus $(4)$ und $(5)$ udn (IV) folgt dass $\bigsqcup A_{i+1}$ existiert (6)\\\\
-Aus (3) und (6) folgt dass für jede $A \subseteq X$ sowohl  $\bigsqcup A$ als auch $\bigsqcap A$ existieren, $\bigsqcup A_1$  und $\bigsqcap A_1$ trivialerweiser existieren. Daraus folgt dass $(X,R)$ nach Definition 4.3 ein vollständiger Verband ist. $\blacksquare$
+Aus (3) und (6) folgt dass für jede $A \subseteq X$ sowohl  $\bigsqcup A$ als auch $\bigsqcap A$ existieren, $\bigsqcup A_1$  und $\bigsqcap A_1$ trivialerweise existieren. Daraus folgt dass $(X,R)$ nach Definition 4.3 ein vollständiger Verband ist. $\blacksquare$
