--- a/TheGI4/ha3/hausaufgabe3.tex
+++ b/TheGI4/ha3/hausaufgabe3.tex
@@ -16,7 +16,7 @@
 \usetikzlibrary{arrows}
 \RequirePackage{etoolbox}
 \usepackage{Macros}
-
+\newcommand{\nbisim}{\,{\bisim}_{n}\,}
 \title{TheGI4 HA3}
 \author{David Konopek(349333),\\ Paul Walger(349968),\\ Lukas Klammt(332263)}
 
