--- a/TheGI4/ha3/hausaufgabe3.tex
+++ b/TheGI4/ha3/hausaufgabe3.tex
@@ -17,6 +17,7 @@
 \RequirePackage{etoolbox}
 \usepackage{Macros}
 \newcommand{\nbisim}{\,{\bisim}_{n}\,}
+\newcommand{\kbisim}[1]{\,{\bisim}_{#1}\,}
 \title{TheGI4 HA3}
 \author{David Konopek(349333),\\ Paul Walger(349968),\\ Lukas Klammt(332263)}
 
