--- a/TheGI4/ha3/hausaufgabe3.tex
+++ b/TheGI4/ha3/hausaufgabe3.tex
@@ -18,6 +18,8 @@
 \usepackage{Macros}
 \newcommand{\nbisim}{\,{\bisim}_{n}\,}
 \newcommand{\kbisim}[1]{\,{\bisim}_{#1}\,}
+\newcommand{\eqS}[2]{#1 \subseteq #2}
+\newcommand{\eqO}[3]{\OSem{#1}{#2} \subseteq \OSem{#1}{#3}}
 \title{TheGI4 HA3}
 \author{David Konopek(349333),\\ Paul Walger(349968),\\ Lukas Klammt(332263)}
 
