--- a/TheGI4/ha3/aufgabe5.tex
+++ b/TheGI4/ha3/aufgabe5.tex
@@ -1,4 +1,7 @@
-\section*{Aufgabe 3}
-
+\section*{Aufgabe 5}
+$P \bisim Q$ gilt.\\
+$F_1 = \poss{a}\necess{a}\false$ wird von $V$ erfüllt, aber von $U$ nicht.\\
+$F_2 = \necess{a} \poss{b} \true$ wird von $X$ erfüllt aber nicht von $Y$.\\
+$F_3 = \poss{a_1} \poss{a_0} \true $ wird von $T$ erfüllt, aber nicht von $S_n$.
 
 
