--- a/TheGI4/ha3/aufgabe4.tex
+++ b/TheGI4/ha3/aufgabe4.tex
@@ -1,6 +1,6 @@
 \section*{Aufgabe 4}
 
-$F_1 = \poss {a} \poss {a} \true$ wird von $q$ erfüllt, aber nicht von $p$.\\
+$F_1 = \poss{a} \poss{a} \poss{b} \true$ wird von $q$ erfüllt, aber nicht von $p$.\\
 $F_2 = \necess{a} (\poss{b} \true \land \poss{c} \true)$ wird von $s$ aber nicht von $r$,\\
 $F_3 = \necess{a} \poss{b} \true$ wird von $v$ erfüllt, aber nicht von $u$.
 
