--- a/TheGI4/ha3/aufgabe3.tex
+++ b/TheGI4/ha3/aufgabe3.tex
@@ -1,4 +1,19 @@
 \section*{Aufgabe 3}
 
 
+\begin{tikzpicture}[->,>=stealth',shorten >=1pt,auto,node distance=3cm,
+  thick,main node/.style={font=\sffamily\Large\bfseries}]
+
+  \node[main node] (1) {p1};
+  \node[main node] (2) [below of=1] {p2};
+  \node[main node] (3) [right of=2] {p3};
+  \node[main node] (4) [right of=1] {p4};
+  
+  \path[every node]
+    (1) edge node [above] {c} (4)
+        edge node [left] {a} (2)
+    (2) edge [loop left] node [left] {a} (2)
+    	edge node [above] {b} (3)
+    (3) edge node [right] {b} (4);
+\end{tikzpicture}
 
