--- a/TheGI4/ha3/aufgabe8.tex
+++ b/TheGI4/ha3/aufgabe8.tex
@@ -1,4 +1,9 @@
 \section*{Aufgabe 8}
+  \subsection*{a)}
+  $X \HMmax \HMand {\HMor *{\HMand *{\necess {a} \false}{\poss {b} \true}}{\HMand *{\poss {a} \true}{\necess {b} \false}}}{\necess {\Act}X} $
+  \subsection*{b)}
+  $F_2$ = $\HMand {\poss {c} \true}{X}$\\
+  $X \HMmin \necess {a} \HMor *{\HMor *{\necess {a}\false}{\poss{b}\true}}{\poss {\Act}X}$
 
 
 
