--- a/TheGI4/ha3/aufgabe7.tex
+++ b/TheGI4/ha3/aufgabe7.tex
@@ -30,7 +30,8 @@ gilt da $\eqO{F}{A}{B}$ und $\eqO{G}{A}{B}$\\\\
 5. $V := \poss{a}F$\\
 \begin{align*}
 \eqS{A}{B} & \Rightarrow \eqO{\poss{a}F}{A}{B} \\
-\Leftrightarrow \eqS{A}{B} & \Rightarrow \eqS{\possDenot{a}\OSem{F}{A}}{\possDenot{a}\OSem{F}{B}}
+\Leftrightarrow \eqS{A}{B} & \Rightarrow \eqS{\possDenot{a}\OSem{F}{A}}{\possDenot{a}\OSem{F}{B}} \\
+\Leftrightarrow \eqS{A}{B} & \Rightarrow \eqS{\{p| \exists  p' \in Der(p,a) \land p' \in \OSem{F}{A}\}}{\{p| \exists p' \in Der(p,a) \land p' \in \OSem{F}{B}\}}
 \end{align*}
-gilt da $\eqO{F}{A}{B}$ und $\possDenot{a}$ TODO
+gilt offensichtlich da $\eqO{F}{A}{B}$ 
 
